fixing the jumpiness

--- a/dev/less/styles.less
+++ b/dev/less/styles.less
@@ -112,8 +112,7 @@ a {
 		margin-top: -20px;
 	}
 	&-right {
-		width: 100%;
-		max-width: 1180px;
+		width: 1180px;
 		padding: 0 30px 0 280px;
 	}
 }
@@ -307,10 +306,17 @@ a {
 			padding-left: 12px;
 		}
 		.module-main {
-			min-height: 250px;
+			height: 500px;
+	    background-color: #333;
 			.main-image {
-				width: 100%;
-				display: block;
+				// height: 100%;
+				// display: block;
+				// margin: auto;
+				//
+				max-height: 100%;
+		    display: block;
+		    margin: auto;
+		    max-width: 723px;
 			}
 		}
 	}
